# LIVOIP

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install.sh
asterisk-li/: .teste.py.swp  li_asterisk.py  module_adm.py  module_asterisk.py  module_mediation.py  system.py  system_module_adm.py  system_module_asterisk.py  system_module_user.py  teste.py  teste_snmp.py
asterisk-li/certs/: cert.pem
asterisk-li/init/: adm_add.sh  adm_rm.sh  asterisk.sh  cc.sh  iri.sh  mediation_function.sh  server.sh
asterisk-li/modules/adm_function/: adm_function.py
asterisk-li/modules/adm_function/conf/: adm.conf  adm_add.conf  adm_rm.conf
asterisk-li/modules/adm_function/server/: server.py
asterisk-li/modules/ari/: http.py  recourses.py  uris.py
asterisk-li/modules/asterisk/: ali.py  asterisk.py
asterisk-li/modules/asterisk/cc/: cc.py
asterisk-li/modules/asterisk/conf/: asterisk.conf  asterisk.db  cc.conf  iri.conf  server.conf
asterisk-li/modules/asterisk/database/: database.py
asterisk-li/modules/asterisk/events/: asterisk.py  events.py
asterisk-li/modules/asterisk/hi1/: hi1.py  server.py
asterisk-li/modules/asterisk/iri/: iri.py
asterisk-li/modules/asterisk/register/: register.py
asterisk-li/modules/asterisk/server/: server.py
asterisk-li/modules/asterisk/sniffer/: sniffer.py
asterisk-li/modules/asterisk/socket/: tcp.py
asterisk-li/modules/conf/: li.conf
asterisk-li/modules/database/: database.py  iri.py  li_cadastro.py  oficio.py  operadora.py
asterisk-li/modules/events/: events.py
asterisk-li/modules/mediation_function/: mediation_function.py
asterisk-li/scripts/: run_docker.sh
asterisk-li/teste/: client.py  https.py
asterisk-li/teste/certificados/: cert.pem  example-com.cert.pem  example-com.key.pem  private.pem  public.pem  server.CA-signed.crt  server.CA.csr  server.CA.key  server.pem  teste.pem
asterisk-li/teste/ssl/: server.cert  server.key
asterisk-li/testes/: sip.pcap  sip.txt  sip2.pcap  sip3.pcap
docker/: Dockerfile
evidencias/27092020/: cenarios
evidencias/evidencias_final/: cenarios
evidencias/tcc/: cenarios
logs/ali/: adm.log.1
testes/: 9uN4QH2qDT.pcap  9uN4QH2qDT.pcap.B  K-obkqdb06.pcap.B  L_xv8SSp7QFg__20SO_.pcap  L_xv8SSp7QFg__20SO_.pcap.B  sip.txt  teste.pcap
testes/arquivos_recuperados/: IAfsU7TSN-.pcap
testes/capturas/: cenarios
testes/pcaps/: FgozOSDV7L.pcap  FgozOSDV7L.pcap.B  HJ_JFOHBNdO88nkgatL.pcap  HJ_JFOHBNdO88nkgatL.pcap.B  L_xv8SSp7QFg__20SO_r.pcap.B  zQ55HfFhbW.pcap  zQ55HfFhbW.pcap.B
testes/resultados/central/: d4gr2Swkoe.pcap  v7LuIEF87XBNSmJsrh93.pcap.B
testes/resultados_nuvem/central/: d4gr2Swkoe.pcap.B  v7LuIEF87XBNSmJsrh93.pcap
testes/resultados_nuvem/recuperados_email/: d4gr2Swkoe.pcap  v7LuIEF87XBNSmJsrh93.pcap
testes/resultados_nuvem/teste_pcap/: 2uGnRYsBWs2Ds3Mf6Bi2.pcap  2uGnRYsBWs2Ds3Mf6Bi2.pcap.B  4ElLfOH382.pcap  4ElLfOH382.pcap.B  GXJSY3orv6.pcap  GXJSY3orv6.pcap.B  ISR8Ndq3f9.pcap  ISR8Ndq3f9.pcap.B  XIR5WOVBa_UtHCstchPF.pcap  xDi24EOd_FcwqNfblSWF.pcap  xDi24EOd_FcwqNfblSWF.pcap.B  yPcxGkIxXf_pUelkaC_y.pcap
(+34 files in other folders)
